<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:paddingBottom="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    search box start-->

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_last_updated_time">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/humidity"
                android:textAllCaps="false"
                android:textColor="@color/text1"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:freezesText="true"
                android:text="@string/na"
                android:textColor="@color/text1"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/pressure"
                android:textAllCaps="false"
                android:textColor="@color/text1"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/na"
                android:textColor="@color/text1"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/wind_speed"
                android:textAllCaps="false"
                android:textColor="@color/text1"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/na"
                android:textColor="@color/text1"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutForecast"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecast_desc">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/forecast_recyclerview"
            android:layout_width="wrap_content"
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/design_default_color_background"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_border"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_search_box"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@drawable/rounded_border"
            android:ems="10"
            android:focusable="auto"
            android:hint="@string/enter_your_city_name"
            android:imeOptions="actionGo"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#171616"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image_search"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/btn_search" />


    </RelativeLayout>

    <TextView
        android:id="@+id/text_last_updated_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:freezesText="true"
        android:includeFontPadding="false"
        android:text="@string/last_updated_at_na"
        android:textColor="@color/text1"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:padding="3dp"
        android:text="Sunrises :"
        android:textAllCaps="false"
        android:textColor="@color/text1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_sunrise"
        app:layout_constraintEnd_toStartOf="@+id/text_sunrise"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_sunrise" />

    <TextView
        android:id="@+id/text_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="3dp"
        android:text="NA"
        android:textColor="@color/text1"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:freezesText="true"
        android:padding="3dp"
        android:text="Sunsets :"
        android:textAllCaps="false"
        android:textColor="@color/text1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_sunset"
        app:layout_constraintEnd_toStartOf="@+id/text_sunset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_sunrise"
        app:layout_constraintTop_toTopOf="@+id/text_sunset" />

    <TextView
        android:id="@+id/text_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:freezesText="true"
        android:gravity="center"
        android:padding="3dp"
        android:text="NA"
        android:textColor="@color/text1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    <TextView
        android:id="@+id/forecast_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/_3_hourly_forecast"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sunset" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_border_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first">


        <ImageView
            android:id="@+id/image_forecast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toTopOf="@+id/text_forecast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.77"
            app:layout_constraintStart_toEndOf="@+id/text_day"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.49" />

        <TextView
            android:id="@+id/text_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:freezesText="true"
            android:includeFontPadding="false"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/text_city_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:freezesText="true"
            android:includeFontPadding="false"
            android:text="@string/city"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_day"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_day" />


        <TextView
            android:id="@+id/text_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:freezesText="true"
            android:includeFontPadding="false"
            android:text="NA"
            android:textAllCaps="false"
            android:textColor="@color/text2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:freezesText="true"
            android:includeFontPadding="false"
            android:text="@string/na"
            android:textColor="@color/text2"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_real_feel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_city_name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:freezesText="true"
            android:text="@string/real_feel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/text_real_feel"
            app:layout_constraintStart_toStartOf="@+id/text_city_name"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature" />

        <TextView
            android:id="@+id/text_real_feel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:padding="5dp"
            android:text="@string/na"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="8dp" />


</androidx.constraintlayout.widget.ConstraintLayout>